--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.3.1
 annotated-types==0.7.0
+anyio==4.6.0
 asgiref==3.8.1
 attrs==24.2.0
 autobahn==24.4.2
@@ -12,6 +13,7 @@ cffi==1.17.0
 channels==4.1.0
 charset-normalizer==3.3.2
 ckzg==2.0.0
+click==8.1.7
 colorlog==6.8.2
 constantly==23.10.4
 cryptography==43.0.0
@@ -30,7 +32,9 @@ eth-rlp==2.1.0
 eth-typing==5.0.0
 eth-utils==5.0.0
 eth_abi==5.1.0
+fastapi==0.115.0
 frozenlist==1.4.1
+h11==0.14.0
 hexbytes==1.2.1
 hyperlink==21.0.0
 idna==3.7
@@ -57,8 +61,11 @@ regex==2024.7.24
 requests==2.31.0
 rlp==4.0.1
 service-identity==24.1.0
+setuptools==75.1.0
 six==1.16.0
+sniffio==1.3.1
 sqlparse==0.5.1
+starlette==0.38.6
 tomli==2.0.1
 toolz==0.12.1
 Twisted==24.7.0
@@ -67,6 +74,7 @@ types-requests==2.32.0.20240712
 typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.2.2
+uvicorn==0.31.0
 web3==7.0.0
 websockets==13.0
 yarl==1.9.4
