--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.0
 asgiref==3.8.1
+async-timeout==4.0.3
 attrs==24.2.0
 autobahn==24.4.2
 Automat==22.10.0
@@ -32,16 +33,27 @@ eth-rlp==2.1.0
 eth-typing==5.0.0
 eth-utils==5.0.0
 eth_abi==5.1.0
+exceptiongroup==1.2.2
 fastapi==0.115.0
 frozenlist==1.4.1
+greenlet==3.1.1
 h11==0.14.0
 hexbytes==1.2.1
+httpcore==1.0.6
+httpx==0.27.2
 hyperlink==21.0.0
 idna==3.7
 incremental==24.7.2
 inflection==0.5.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.7
+langchain-core==0.3.15
+langchain-text-splitters==0.3.2
+langsmith==0.1.141
 multidict==6.0.5
-numpy==2.0.1
+numpy==1.26.4
+orjson==3.10.11
 packaging==24.1
 parsimonious==0.10.0
 psycopg2-binary==2.9.9
@@ -59,13 +71,15 @@ pyunormalize==15.1.0
 PyYAML==6.0.1
 regex==2024.7.24
 requests==2.31.0
+requests-toolbelt==1.0.0
 rlp==4.0.1
 service-identity==24.1.0
-setuptools==75.1.0
 six==1.16.0
 sniffio==1.3.1
+SQLAlchemy==2.0.36
 sqlparse==0.5.1
 starlette==0.38.6
+tenacity==9.0.0
 tomli==2.0.1
 toolz==0.12.1
 Twisted==24.7.0
