--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ constantly==23.10.4
 cryptography==43.0.0
 cytoolz==0.12.3
 daphne==4.1.2
+distro==1.9.0
 Django==4.2.14
 django-cors-headers==4.4.0
 djangorestframework==3.15.2
@@ -45,14 +46,17 @@ hyperlink==21.0.0
 idna==3.7
 incremental==24.7.2
 inflection==0.5.1
+jiter==0.7.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.3.7
 langchain-core==0.3.15
+langchain-openai==0.2.6
 langchain-text-splitters==0.3.2
 langsmith==0.1.141
 multidict==6.0.5
 numpy==1.26.4
+openai==1.54.3
 orjson==3.10.11
 packaging==24.1
 parsimonious==0.10.0
@@ -80,8 +84,10 @@ SQLAlchemy==2.0.36
 sqlparse==0.5.1
 starlette==0.38.6
 tenacity==9.0.0
+tiktoken==0.8.0
 tomli==2.0.1
 toolz==0.12.1
+tqdm==4.67.0
 Twisted==24.7.0
 txaio==23.1.1
 types-requests==2.32.0.20240712
