--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ constantly==23.10.4
 cryptography==43.0.0
 cytoolz==0.12.3
 daphne==4.1.2
+dataclasses-json==0.6.7
 distro==1.9.0
 Django==4.2.14
 django-cors-headers==4.4.0
@@ -35,6 +36,7 @@ eth-typing==5.0.0
 eth-utils==5.0.0
 eth_abi==5.1.0
 exceptiongroup==1.2.2
+faiss-cpu==1.9.0
 fastapi==0.115.0
 frozenlist==1.4.1
 greenlet==3.1.1
@@ -42,6 +44,7 @@ h11==0.14.0
 hexbytes==1.2.1
 httpcore==1.0.6
 httpx==0.27.2
+httpx-sse==0.4.0
 hyperlink==21.0.0
 idna==3.7
 incremental==24.7.2
@@ -50,11 +53,14 @@ jiter==0.7.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.3.7
-langchain-core==0.3.15
+langchain-community==0.3.7
+langchain-core==0.3.18
 langchain-openai==0.2.6
 langchain-text-splitters==0.3.2
 langsmith==0.1.141
+marshmallow==3.23.1
 multidict==6.0.5
+mypy-extensions==1.0.0
 numpy==1.26.4
 openai==1.54.3
 orjson==3.10.11
@@ -66,6 +72,7 @@ pyasn1_modules==0.4.0
 pycparser==2.22
 pycryptodome==3.20.0
 pydantic==2.8.2
+pydantic-settings==2.6.1
 pydantic_core==2.20.1
 PyJWT==2.9.0
 pyOpenSSL==24.2.1
@@ -80,7 +87,7 @@ rlp==4.0.1
 service-identity==24.1.0
 six==1.16.0
 sniffio==1.3.1
-SQLAlchemy==2.0.36
+SQLAlchemy==2.0.35
 sqlparse==0.5.1
 starlette==0.38.6
 tenacity==9.0.0
@@ -91,6 +98,7 @@ tqdm==4.67.0
 Twisted==24.7.0
 txaio==23.1.1
 types-requests==2.32.0.20240712
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.2.2
