--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,4 @@
-SWAGGER_USERNAME=""
-SWAGGER_PASSWORD=""
-OPENAI_API_KEY=""
+SWAGGER_USERNAME=
+SWAGGER_PASSWORD=
+OPENAI_API_KEY=
+DICTIONARY_API_KEY=
