--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ attrs==24.2.0
 autobahn==24.4.2
 Automat==22.10.0
 bitarray==2.9.2
+cachetools==5.5.2
 certifi==2024.7.4
 cffi==1.17.0
 channels==4.1.0
@@ -38,8 +39,15 @@ eth_abi==5.1.0
 exceptiongroup==1.2.2
 faiss-cpu==1.9.0
 fastapi==0.115.0
+filetype==1.2.0
 frozenlist==1.4.1
+google-ai-generativelanguage==0.6.18
+google-api-core==2.24.2
+google-auth==2.40.1
+googleapis-common-protos==1.70.0
 greenlet==3.1.1
+grpcio==1.71.0
+grpcio-status==1.71.0
 h11==0.14.0
 hexbytes==1.2.1
 httpcore==1.0.6
@@ -52,11 +60,12 @@ inflection==0.5.1
 jiter==0.7.0
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain==0.3.7
+langchain==0.3.25
 langchain-community==0.3.7
-langchain-core==0.3.18
+langchain-core==0.3.59
+langchain-google-genai==2.1.4
 langchain-openai==0.2.6
-langchain-text-splitters==0.3.2
+langchain-text-splitters==0.3.8
 langsmith==0.1.141
 marshmallow==3.23.1
 multidict==6.0.5
@@ -66,6 +75,8 @@ openai==1.54.3
 orjson==3.10.11
 packaging==24.1
 parsimonious==0.10.0
+proto-plus==1.26.1
+protobuf==5.29.4
 psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
@@ -84,7 +95,9 @@ regex==2024.7.24
 requests==2.31.0
 requests-toolbelt==1.0.0
 rlp==4.0.1
+rsa==4.9.1
 service-identity==24.1.0
+setuptools==80.4.0
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.35
