--- a/src/config/llm_config.yaml
+++ b/src/config/llm_config.yaml
@@ -10,38 +10,33 @@ models:
 
   # Diary generation model
   diary:
-    model_name: "gemini-flash-lite-latest"
+    model_name: "gemini-flash-latest"
     temperature: 0.7
 
   # Diary splitting model (deterministic)
   diary_split:
-    model_name: "gpt-4o-mini"
+    model_name: "gemini-flash-lite-latest"
     temperature: 0.0
-    max_tokens: 4096
 
   # Emotion finding models with varying temperatures
   emotion_finding:
     primary:
-      model_name: "gpt-4o-mini"
+      model_name: "gemini-flash-lite-latest"
       temperature: 0.0
-      max_tokens: 2048
 
     low:
-      model_name: "gpt-4o-mini"
+      model_name: "gemini-flash-lite-latest"
       temperature: 0.25
-      max_tokens: 2048
 
     medium:
-      model_name: "gpt-4o-mini"
+      model_name: "gemini-flash-lite-latest"
       temperature: 0.5
-      max_tokens: 2048
 
     high:
-      model_name: "gpt-4o-mini"
+      model_name: "gemini-flash-lite-latest"
       temperature: 0.75
-      max_tokens: 2048
 
   # Sentence remaking model
   remake:
-    model_name: "gemini-flash-lite-latest"
+    model_name: "gemini-flash-latest"
     temperature: 0.25
