--- a/src/config/llm_config.yaml
+++ b/src/config/llm_config.yaml
@@ -10,6 +10,13 @@ models:
     thinking_mode: true
     thinking_budget: 512
 
+  # Chat fallback model (used when primary chat model returns empty response)
+  chat_fallback:
+    model_name: "gemini-flash-latest"
+    temperature: 0.7
+    thinking_mode: true
+    thinking_budget: 512
+
   # Diary generation model
   diary:
     model_name: "gemini-flash-latest"
