--- a/src/config/llm_config.yaml
+++ b/src/config/llm_config.yaml
@@ -16,6 +16,7 @@ models:
     temperature: 0.7
     thinking_mode: true
     thinking_budget: 512
+    max_output_tokens: 5096
 
   # Diary generation model
   diary:
