--- a/src/config/llm_config.yaml
+++ b/src/config/llm_config.yaml
@@ -5,7 +5,7 @@
 models:
   # Chat conversation model
   chat:
-    model_name: "gemini-flash-lite-latest"
+    model_name: "gemini-flash-latest"
     temperature: 0.7
     thinking_mode: true
     thinking_budget: 512
@@ -27,7 +27,7 @@ models:
 
   # Diary splitting model (deterministic)
   diary_split:
-    model_name: "gemini-flash-lite-latest"
+    model_name: "gemini-flash-latest"
     temperature: 0.0
     thinking_mode: true
     thinking_budget: 512
@@ -35,32 +35,32 @@ models:
   # Emotion finding models with varying temperatures
   emotion_finding:
     primary:
-      model_name: "gemini-flash-lite-latest"
+      model_name: "gemini-flash-latest"
       temperature: 0.0
       thinking_mode: true
       thinking_budget: 512
 
     low:
-      model_name: "gemini-flash-lite-latest"
+      model_name: "gemini-flash-latest"
       temperature: 0.25
       thinking_mode: true
       thinking_budget: 512
 
     medium:
-      model_name: "gemini-flash-lite-latest"
+      model_name: "gemini-flash-latest"
       temperature: 0.5
       thinking_mode: true
       thinking_budget: 512
 
     high:
-      model_name: "gemini-flash-lite-latest"
+      model_name: "gemini-flash-latest"
       temperature: 0.75
       thinking_mode: true
       thinking_budget: 512
 
   # Sentence remaking model
   remake:
-    model_name: "gemini-flash-lite-latest"
+    model_name: "gemini-flash-latest"
     temperature: 0.25
     thinking_mode: true
     thinking_budget: 512
